--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Admin Dashboard</title>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <title>Admin - Payment Verification</title>
 
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-app.js";
-    import { getFirestore, collection, getDocs, query, orderBy } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-firestore.js";
+    import {
+      getFirestore,
+      collection,
+      query,
+      orderBy,
+      onSnapshot
+    } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-firestore.js";
     import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-auth.js";
 
     const firebaseConfig = {
-      apiKey: "YOUR_API_KEY",
-      authDomain: "YOUR_AUTH_DOMAIN",
-      projectId: "YOUR_PROJECT_ID",
+      apiKey: "AIzaSyDzwnmGgEcN63RcCHSNU6p_xXKxmeqzF6k",
+      authDomain: "losixmarket.firebaseapp.com",
+      projectId: "losixmarket",
+      storageBucket: "losixmarket.firebasestorage.app",
+      messagingSenderId: "301860246689",
+      appId: "1:301860246689:web:aabf0ab9af41081a91cce0"
     };
 
     const app = initializeApp(firebaseConfig);
@@ -21,129 +29,102 @@
 
     let allPayments = [];
 
-    async function loadPayments() {
-      const q = query(collection(db, "payment_intents"), orderBy("createdAt", "desc"));
-      const snapshot = await getDocs(q);
+    /* =========================
+       REAL-TIME LISTENER
+    ========================== */
+    function listenPayments() {
+      const q = query(collection(db, "walletTransactions"), orderBy("createdAt", "desc"));
 
-      allPayments = [];
-      snapshot.forEach(doc => {
-        allPayments.push({ id: doc.id, ...doc.data() });
+      onSnapshot(q, snapshot => {
+        allPayments = [];
+        snapshot.forEach(doc => {
+          allPayments.push({ id: doc.id, ...doc.data() });
+        });
+
+        renderTable();
+        updateCounts();
       });
-
-      renderTable();
-      renderStats();
-      renderChart();
     }
 
+    /* =========================
+       RENDER TABLE
+    ========================== */
     function renderTable() {
-      const search = document.getElementById("search").value.toLowerCase();
-      const filter = document.getElementById("statusFilter").value;
-
       const body = document.getElementById("paymentsBody");
       body.innerHTML = "";
 
-      allPayments
-        .filter(p => {
-          const matchSearch =
-            p.couponCode.toLowerCase().includes(search) ||
-            p.senderName.toLowerCase().includes(search) ||
-            p.amount.toString().includes(search);
+      // Pending first
+      const sorted = [...allPayments].sort((a, b) => {
+        if (a.status === "pending" && b.status !== "pending") return -1;
+        if (a.status !== "pending" && b.status === "pending") return 1;
+        return 0;
+      });
 
-          const matchFilter = filter === "all" || p.status === filter;
-
-          return matchSearch && matchFilter;
-        })
-        .forEach(p => {
-          body.innerHTML += `
-            <tr>
-              <td>${p.couponCode}</td>
-              <td>₦${p.amount}</td>
-              <td>${p.senderName}</td>
-              <td class="${p.status}">${p.status}</td>
-              <td>
-                ${p.status === "pending"
-                  ? `<button onclick="approve('${p.id}')">Approve</button>
-                     <button onclick="reject('${p.id}')">Reject</button>`
-                  : "-"}
-              </td>
-            </tr>
-          `;
-        });
+      sorted.forEach(p => {
+        body.innerHTML += `
+          <tr class="${p.status}">
+            <td>${p.coupon || "-"}</td>
+            <td>₦${p.amount || 0}</td>
+           <td>${p.expiresAt?.toDate().toLocaleString() || "-"}</td>
+            <td>${p.email || "-"}</td>
+            <td>${p.createdAt?.toDate().toLocaleString() || "-"}</td>
+            <td>${p.status}</td>
+            <td>
+              ${p.status === "pending"
+                ? `<button onclick="approve('${p.id}')">Approve</button>
+                   <button onclick="reject('${p.id}')">Reject</button>`
+                : "-"}
+            </td>
+          </tr>
+        `;
+      });
     }
 
-    function renderStats() {
+    function updateCounts() {
       const pending = allPayments.filter(p => p.status === "pending").length;
       const matched = allPayments.filter(p => p.status === "matched").length;
       const rejected = allPayments.filter(p => p.status === "rejected").length;
 
-      const today = new Date();
-      const todayTotal = allPayments
-        .filter(p => p.status === "matched" && p.createdAt?.toDate().toDateString() === today.toDateString())
-        .reduce((sum, p) => sum + p.amount, 0);
-
       document.getElementById("pendingCount").innerText = pending;
-      document.getElementById("matchedCount").innerText = matched;
+      document.getElementById("approvedCount").innerText = matched;
       document.getElementById("rejectedCount").innerText = rejected;
-      document.getElementById("todayTotal").innerText = "₦" + todayTotal;
     }
 
-    function renderChart() {
-      const last7 = {};
-      const today = new Date();
-
-      for (let i = 6; i >= 0; i--) {
-        const d = new Date();
-        d.setDate(today.getDate() - i);
-        last7[d.toDateString()] = 0;
-      }
-
-      allPayments.forEach(p => {
-        if (p.status === "matched") {
-          const dateStr = p.createdAt?.toDate().toDateString();
-          if (last7[dateStr] !== undefined) {
-            last7[dateStr] += p.amount;
-          }
-        }
-      });
-
-      new Chart(document.getElementById("chart"), {
-        type: "line",
-        data: {
-          labels: Object.keys(last7),
-          datasets: [{
-            label: "Revenue (₦)",
-            data: Object.values(last7),
-            borderWidth: 2,
-            tension: 0.3
-          }]
-        }
-      });
-    }
-
+    /* =========================
+       APPROVE / REJECT
+    ========================== */
     window.approve = async (id) => {
+      if (!confirm("Approve this payment?")) return;
+
       await fetch("/.netlify/functions/approvePayment", {
         method: "POST",
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify({ intentId: id })
       });
-      loadPayments();
     };
 
     window.reject = async (id) => {
+      if (!confirm("Reject this payment?")) return;
+
       await fetch("/.netlify/functions/rejectPayment", {
         method: "POST",
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify({ intentId: id })
       });
-      loadPayments();
     };
 
+    /* =========================
+       AUTH CHECK
+    ========================== */
     onAuthStateChanged(auth, user => {
-      if (!user) window.location.href = "/";
-      else loadPayments();
+      if (!user) {
+        window.location.replace("/login.html");
+        return;
+      }
+
+      listenPayments();
     });
 
-    window.filterNow = renderTable;
   </script>
 
   <style>
@@ -154,85 +135,72 @@
       padding: 20px;
     }
 
-    .cards {
-      display: grid;
-      grid-template-columns: repeat(4, 1fr);
-      gap: 15px;
+    h1 {
       margin-bottom: 20px;
     }
 
-    .card {
+    .stats {
+      display: flex;
+      gap: 20px;
+      margin-bottom: 20px;
+    }
+
+    .box {
       background: #1e293b;
       padding: 15px;
       border-radius: 10px;
       text-align: center;
+      flex: 1;
     }
 
     table {
       width: 100%;
       background: #1e293b;
       border-collapse: collapse;
-      margin-top: 20px;
     }
 
     th, td {
       padding: 10px;
-      text-align: center;
       border-bottom: 1px solid #334155;
+      text-align: center;
     }
 
     button {
-      padding: 5px 10px;
+      padding: 6px 10px;
       border-radius: 6px;
       border: none;
       cursor: pointer;
+      margin: 2px;
+      color: white;
     }
 
     button:first-child { background: #22c55e; }
     button:last-child { background: #ef4444; }
 
-    input, select {
-      padding: 6px;
-      margin-right: 10px;
-      border-radius: 6px;
-      border: none;
-    }
-
-    .pending { color: orange; }
-    .matched { color: #22c55e; }
-    .rejected { color: #ef4444; }
+    .pending { background: rgba(255,165,0,0.1); }
+    .matched { opacity: 0.6; }
+    .rejected { opacity: 0.5; }
   </style>
 </head>
 
 <body>
 
-  <h1>Admin Dashboard</h1>
+  <h1>Payment Verification Panel</h1>
 
-  <div class="cards">
-    <div class="card">Pending<br><h2 id="pendingCount">0</h2></div>
-    <div class="card">Approved<br><h2 id="matchedCount">0</h2></div>
-    <div class="card">Rejected<br><h2 id="rejectedCount">0</h2></div>
-    <div class="card">Today Total<br><h2 id="todayTotal">₦0</h2></div>
+  <div class="stats">
+    <div class="box">Pending<br><h2 id="pendingCount">0</h2></div>
+    <div class="box">Approved<br><h2 id="approvedCount">0</h2></div>
+    <div class="box">Rejected<br><h2 id="rejectedCount">0</h2></div>
   </div>
-
-  <canvas id="chart" height="80"></canvas>
-
-  <br><br>
-
-  <input type="text" id="search" placeholder="Search..." oninput="filterNow()">
-  <select id="statusFilter" onchange="filterNow()">
-    <option value="all">All</option>
-    <option value="pending">Pending</option>
-    <option value="matched">Approved</option>
-    <option value="rejected">Rejected</option>
-  </select>
 
   <table>
     <thead>
       <tr>
         <th>Coupon</th>
         <th>Amount</th>
-        <th>Sender</th>
+        <th>Expires</th>
+        <th>User Email</th>
+        <th>Date</th>
         <th>Status</th>
         <th>Action</th>
       </tr>
